--- a/App.Web/Views/DoctorPole/HrIndex.cshtml
+++ b/App.Web/Views/DoctorPole/HrIndex.cshtml
@@ -2,7 +2,7 @@
 @using AppProj.Web;
 @model AppProj.Web.Models.SearchModel
 @{
-    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+    Layout = "~/Views/Shared/_LayoutGeneral.cshtml";
     var ajaxOpt = new AjaxOptions
     {
         HttpMethod = "POST",
@@ -14,21 +14,10 @@
     };
 }
 
-<div class="row-fluid">
-    <div class="span12">
-        <ul class="breadcrumb">
-            <li>
-                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;">Suspected Patients by HR</h2>
-            </li>
-        </ul>
-
-    </div>
-</div>
-
 <section id="formElement" class="utopia-widget utopia-form-box section">
     <div class="utopia-widget-title">
-        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
-        <span class="muted">search elements</span>
+        <img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-widget-icon utopia-icons2-small-img">
+        <span class="textPrimary">Suspected Patients by HR</span>
 
         <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
         <span class="textPrimary" style="float:right;">Total Records: </span>
@@ -36,7 +25,7 @@
 
     <div class="row-fluid">
         <div class="utopia-widget-content">
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
                         <label class="control-label" for="ContentTypeId1"> Program:</label>
@@ -46,19 +35,8 @@
                         </div>
                     </div>
                 </fieldset>
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="FromDate">From Date:</label>
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
-
-                        </div>
-                    </div>
-
-                </fieldset>
-
             </div>
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
                         <label class="control-label" for="ContentTypeId2">Division:</label>
@@ -66,20 +44,8 @@
 
                     </div>
                 </fieldset>
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="ToDate">To Date:</label>
-
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
-
-                        </div>
-                    </div>
-
-                </fieldset>
-
             </div>
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
                         <label class="control-label" for="ContentTypeId3"> District :</label>
@@ -89,41 +55,42 @@
                         </div>
                     </div>
                 </fieldset>
+            </div>
+            <div class="span1 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
+                        <label class="control-label" for="FromDate">From Date:</label>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+            <div class="span1 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ToDate">To Date:</label>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+            <div class="span4 utopia-form-freeSpace">                
+                <fieldset>
+                    <div class="control-group">
                         <label class="control-label" for="select01">
                             &nbsp;
                         </label>
                         <div class="controls">
                             <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> Search </a>
-                        </div>
-                    </div>
-
-                </fieldset>
-
-            </div>
-            <div class="span3 utopia-form-freeSpace">
-                <fieldset>
-                    <div class="control-group">
-                        <label class="control-label" for="select01">
-                            &nbsp;
-                        </label>
-                        <div class="controls">
-                            &nbsp;
                             @if (UserRole.Check("DoctorPool_HR", SessionHelper.Role))
                             {
-                                @Ajax.ActionLink("New Call", "Create", "DoctorsPole", ajaxOpt, new { @class = "btn btn-danger pull-right" })
+                                @Ajax.ActionLink("New Call", "Create", "DoctorsPole", ajaxOpt, new { @class = "btn btn-danger" })
                             }
-                        </div>
-                    </div>
 
-                </fieldset>
-                <fieldset>
-                    <div class="control-group">
-                        <label class="control-label" for="select01">
-                            &nbsp;
-                        </label>
-                        <div class="controls">
                             <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
                             <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
 
@@ -175,9 +142,9 @@
                 Data Entered by
             </th>
             @*@if (UserRole.Check("DoctorPool_HR", SessionHelper.Role))
-            {
-                <th></th>
-            }*@
+                {
+                    <th></th>
+                }*@
         </tr>
     </thead>
 </table>
