--- a/App.Web/Views/DoctorPole/ReportIndex.cshtml
+++ b/App.Web/Views/DoctorPole/ReportIndex.cshtml
@@ -2,7 +2,7 @@
 @using AppProj.Web;
 @model AppProj.Web.Models.SearchModel
 @{
-    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+    Layout = "~/Views/Shared/_LayoutGeneral.cshtml";
     var ajaxOpt = new AjaxOptions
     {
         HttpMethod = "POST",
@@ -14,21 +14,10 @@
     };
 }
 
-<div class="row-fluid">
-    <div class="span12">
-        <ul class="breadcrumb">
-            <li>
-                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;">All Profiles</h2>
-            </li>
-        </ul>
-
-    </div>
-</div>
-
 <section id="formElement" class="utopia-widget utopia-form-box section">
     <div class="utopia-widget-title">
-        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
-        <span class="muted">search elements</span>
+        <img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-widget-icon utopia-icons2-small-img">
+        <span class="textPrimary">All Profiles</span>
 
         <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
         <span class="textPrimary" style="float:right;">Total Records: </span>
@@ -36,7 +25,7 @@
 
     <div class="row-fluid">
         <div class="utopia-widget-content">
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
                         <label class="control-label" for="ContentTypeId1"> Program:</label>
@@ -46,32 +35,10 @@
                         </div>
                     </div>
                 </fieldset>
-                <fieldset>
-                    <div class="control-group ">
-                        Date by: <input type="radio" id="follow" name="rdoDateType" value="L" checked="checked"> Last Follow-Up
-                        <input type="radio" id="entry" name="rdoDateType" value="N"> Next Folloe-Up
-                        <input type="radio" id="entry" name="rdoDateType" value="E"> Enrollment
-                        <input type="hidden" id="dateType" value="L" />
-                    </div>
-                    <div class="control-group ">
-                        <label class="control-label" for="FromDate">From Date:</label>
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
 
-                        </div>
-                    </div>
-                    <div class="control-group ">
-                        <label class="control-label" for="ToDate">To Date:</label>
-
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
-
-                        </div>
-                    </div>
-                </fieldset>
 
             </div>
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
                         <label class="control-label" for="ContentTypeId2">Division:</label>
@@ -79,27 +46,8 @@
 
                     </div>
                 </fieldset>
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="ToDate">Status:</label>
-
-                        <div class="controls">
-                            @for (int i = 0; i < Model.StatusList.Count(); i++)
-                            {
-                                @Html.CheckBoxFor(model => model.StatusList[i].Selected, new { @style = "margin-left:20px; margin-right:5px;", @class = "statusChk" })
-                                @Html.DisplayFor(model => model.StatusList[i].Text)
-                                @Html.HiddenFor(model => model.StatusList[i].Value)
-                                @Html.HiddenFor(model => model.StatusList[i].Text)
-                                <br />
-                            }
-                            <input type="hidden" id="StatusIds" value="" />
-                        </div>
-                    </div>
-
-                </fieldset>
-
             </div>
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group ">
                         <label class="control-label" for="ContentTypeId3"> District :</label>
@@ -109,37 +57,59 @@
                         </div>
                     </div>
                 </fieldset>
-                <fieldset>
-                    <div class="control-group ">
-                        <label class="control-label" for="select01">
-                            &nbsp;
-                        </label>
-                        <div class="controls">
-                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> Search </a>
-                        </div>
-                    </div>
-
-                </fieldset>
-
             </div>
-            <div class="span3 utopia-form-freeSpace">
+            <div class="span2 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group">
                         <label class="control-label" for="select01">
                             Search By PIN / Mobile No
                         </label>
                         <div class="controls">
-                            @Html.TextBoxFor(model => model.SearchText)
+                            @Html.TextBoxFor(model => model.SearchText, new { @class = "span12" })
                         </div>
+                    </div>
+                </fieldset>
+            </div>
+            <div class="span4 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group">
+                        @for (int i = 0; i < Model.StatusList.Count(); i++)
+                        {
+                            @Html.CheckBoxFor(model => model.StatusList[i].Selected, new { @style = "margin-left:20px; margin-right:5px;", @class = "statusChk" })
+                            @Html.DisplayFor(model => model.StatusList[i].Text)
+                            @Html.HiddenFor(model => model.StatusList[i].Value)
+                            @Html.HiddenFor(model => model.StatusList[i].Text)
+
+                        }
+                        <input type="hidden" id="StatusIds" value="" />
                     </div>
 
                 </fieldset>
+            </div>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="utopia-widget-content">
+            <div class="span8 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        Date by: <input type="radio" id="follow" name="rdoDateType" value="L" checked="checked"> Last Follow-Up
+                        <input type="radio" id="entry" name="rdoDateType" value="N"> Next Folloe-Up
+                        <input type="radio" id="entry" name="rdoDateType" value="E"> Enrollment
+                        <input type="hidden" id="dateType" value="L" />
+
+                        From Date:   @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+                        To Date: @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                    </div>
+                </fieldset>
+            </div>
+            <div class="span4 utopia-form-freeSpace">
                 <fieldset>
                     <div class="control-group">
-                        <label class="control-label" for="select01">
-                            &nbsp;
-                        </label>
                         <div class="controls">
+                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> Search </a>
+
                             <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
                             <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
 
