--- a/App.Web/Views/Shared/_LayoutGeneral.cshtml
+++ b/App.Web/Views/Shared/_LayoutGeneral.cshtml
@@ -38,7 +38,7 @@
 
         $(document).ready(function () {
             
-            LoadMenuTop('@Url.Action("MenuData", "Main")');
+            //LoadMenuTop('@Url.Action("MenuData", "Main")');
 
             KeepSessionAlive('@Url.Content("~/Home/HeartBeat")');
 
