--- a/App.Web/Views/DoctorPole/CreateDetail.cshtml
+++ b/App.Web/Views/DoctorPole/CreateDetail.cshtml
@@ -115,7 +115,7 @@
                         @foreach (var v in Model.ExistingData)
                         {
                             <tr>
-                                <td>@v.StandingData5.Name</td>
+                                <td>@{var v5 = v.StandingData5 == null ? "" : v.StandingData5.Name;} @v5</td>
                                 <td>@v.Name</td>
                                 @*<td>@v.Age</td>
                                     <td>@v.StandingData.Name</td>*@
