--- a/App.Web/Views/DoctorPole/Followup.cshtml
+++ b/App.Web/Views/DoctorPole/Followup.cshtml
@@ -20,7 +20,7 @@
     @Html.HiddenFor(m => m.DoctorPoleId)
 
 
-    <button type="button" class="collapsible">@Model.DoctorsPole.StandingData4.Name  <span style="font-size:11px;"> @Model.DoctorsPole.StaffName (PIN : @Model.DoctorsPole.PIN)</span></button>
+    <button type="button" class="collapsible">@{var v5 = Model.DoctorsPole.StandingData5 == null ? "" : Model.DoctorsPole.StandingData5.Name;} @v5  <span style="font-size:11px;"> @Model.DoctorsPole.StaffName (PIN : @Model.DoctorsPole.PIN)</span></button>
     <div class="content">
         <table class="table table-striped table-bordered" style="width:100%">
             <tr>
@@ -29,20 +29,20 @@
                 <th>Mobile No</th>
                 <td>@Model.DoctorsPole.MobileNo</td>
                 <th>Gender</th>
-                <td>@Model.DoctorsPole.StandingData.Name</td>
+                <td>@{var v0 = Model.DoctorsPole.StandingData == null ? "" : Model.DoctorsPole.StandingData.Name;} @v0</td>
             </tr>
             <tr>
                 <th>Program</th>
-                <td>@Model.DoctorsPole.StandingData1.Name</td>
+                <td>@{var v1 = Model.DoctorsPole.StandingData == null ? "" : Model.DoctorsPole.StandingData.Name;} @v1</td>
                 <th>Area Office</th>
                 <td>@Model.DoctorsPole.AreaOffice</td>
                 <th rowspan="2" colspan="2">HR Comment: @Model.DoctorsPole.CommentByHR</th>
             </tr>
             <tr>
                 <th>Division</th>
-                <td>@Model.DoctorsPole.StandingData3.Name</td>
+                <td>@{var v3 = Model.DoctorsPole.StandingData3 == null ? "" : Model.DoctorsPole.StandingData3.Name;} @v3</td>
                 <th>District</th>
-                <td>@Model.DoctorsPole.StandingData4.Name</td>
+                <td>@{var v4 = Model.DoctorsPole.StandingData4 == null ? "" : Model.DoctorsPole.StandingData4.Name;} @v4</td>
             </tr>
         </table>
     </div>
